[gd_scene load_steps=3 format=3 uid="uid://1fdi6h6we60c"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_cswck"]
[ext_resource type="PackedScene" uid="uid://csrtgipxxda5j" path="res://scenes/tooltip.tscn" id="2_t6slh"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_cswck")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -235.0
offset_right = 195.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32
alignment = 1

[node name="MenuBanner" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Banner in menu"

[node name="GameBanner" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Banner in game"

[node name="Fullscreen" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Fullscreen after game"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "?"

[node name="RewardedOnHighscore" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Rewarded Fullscreen 
on highscore"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "?"

[node name="RewardedOnStart" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Rewarded on start"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackButton" type="Button" parent="VBoxContainer/Control"]
layout_mode = 0
offset_top = 80.0
offset_bottom = 80.0
text = "Back"

[node name="Tooltip" parent="." instance=ExtResource("2_t6slh")]
visible = false

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="toggled" from="VBoxContainer/MenuBanner" to="." method="_on_menu_banner_toggled"]
[connection signal="toggled" from="VBoxContainer/GameBanner" to="." method="_on_game_banner_toggled"]
[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/RewardedOnHighscore" to="." method="_on_rewarded_fullscreen_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed_2"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/RewardedOnStart" to="." method="_on_rewarded_on_start_toggled"]
[connection signal="pressed" from="VBoxContainer/Control/BackButton" to="." method="_on_back_button_pressed"]
